Integrated bootstrap|added heading|minor changes

--- a/index.html
+++ b/index.html
@@ -2,9 +2,28 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Javascript Calculator</title>
+	<link rel="stylesheet" href="bootStrap/css/bootstrap.min.css">
 </head>
 <body>
-	
+	<div class="container">
+		<table>
+			<th>
+				<h1>Electronic Calculator</h1>
+			</th>
+			<tr>
+				<td>
+					<div>
+					</div>
+				</td>>
+			</tr>
+			<tr>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+		</table>
+	</div>
 </body>
 </html>
