--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Javascript Calculator</title>
 	<link rel="stylesheet" href="bootStrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="style.css">
+	<script src="app.js"></script>
 </head>
 <body>
 	<table class="table">
