--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Javascript Calculator</title>
 	<link rel="stylesheet" href="bootStrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="style.css">
+	<script src="bootStrap/js/jquery-3.2.1.min.js"></script>
 	<script src="app.js"></script>
 </head>
 <body>
@@ -22,28 +23,28 @@
 				</td>
 			</tr>
 			<tr>
-				<td><button class="buttons">7</button></td>
-				<td><button class="buttons">8</button></td>
-				<td><button class="buttons">9</button></td>
-				<td><button class="buttons">-</button></td>
+				<td><button class="buttons" id="7">7</button></td>
+				<td><button class="buttons" id="8">8</button></td>
+				<td><button class="buttons" id="9">9</button></td>
+				<td><button class="buttons" id="sub">-</button></td>
 			</tr>
 			<tr>
-				<td><button class="buttons">4</button></td>
-				<td><button class="buttons">5</button></td>
-				<td><button class="buttons">6</button></td>
-				<td><button class="buttons">x</button></td>
+				<td><button class="buttons" id="4">4</button></td>
+				<td><button class="buttons" id="5">5</button></td>
+				<td><button class="buttons" id="6">6</button></td>
+				<td><button class="buttons" id="mul">x</button></td>
 			</tr>
 			<tr>
-				<td><button class="buttons">1</button></td>
-				<td><button class="buttons">2</button></td>
-				<td><button class="buttons">3</button></td>
-				<td><button class="buttons">x</button></td>
+				<td><button class="buttons" id="1">1</button></td>
+				<td><button class="buttons" id="2">2</button></td>
+				<td><button class="buttons" id="3">3</button></td>
+				<td><button class="buttons" id="div">&nbsp;/</button></td>
 			</tr>
 			<tr>
-				<td><button class="buttons">0</button></td>
-				<td><button class="buttons">&nbsp.</button></td>
-				<td><button class="buttons">+</button></td>
-				<td><button class="buttons">=</button></td>
+				<td><button class="buttons" id="0">0</button></td>
+				<td><button class="buttons" id="dot">&nbsp;.</button></td>
+				<td><button class="buttons" id="sum">+</button></td>
+				<td><button class="buttons" id="equal">=</button></td>
 			</tr>
 		</tbody>
 	</table>
