Minor bug fixes

--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
 				<td><button class="buttons" id="sum">+</button></td>
 				<td><button class="buttons" id="equal">=</button></td>
 			</tr>
+			<tr>
+				<td><button class="buttons" id="ac">AC</button></td>
+				<td><button class="buttons" id="ce">CE</button></td>
+			</tr>
 		</tbody>
 	</table>
 	
